--- a/scraper/Dockerfile
+++ b/scraper/Dockerfile
@@ -6,7 +6,8 @@
 FROM alpine:latest
 
 # Install Python3, pip and PyMySQL
-RUN echo "**** install Python ****" && \
+RUN apk add tzdata && \
+    echo "**** install Python ****" && \
     apk add --no-cache python3 && \
     if [ ! -e /usr/bin/python ]; then ln -sf python3 /usr/bin/python ; fi && \
     \
@@ -23,7 +24,7 @@ COPY ./src /home/scraper/src
 RUN touch crontab.tmp /tmp/scraper.log \
     && chmod 744 /tmp/scraper.log \
     && chmod 777 /home/scraper/cron/scraper-cron.sh \
-    && echo "* * * * * /usr/bin/flock -n /tmp/scraper.log -c /home/scraper/cron/scraper-cron.sh >> /tmp/scraper.log 2>&1" >> crontab.tmp \
+    && echo "*/30 * * * * /usr/bin/flock -n /tmp/scraper.log -c /home/scraper/cron/scraper-cron.sh >> /tmp/scraper.log 2>&1" >> crontab.tmp \
     && crontab crontab.tmp \
     && rm -rf crontab.tmp
 
