--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@vue/cli-plugin-eslint": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
     "@vue/eslint-config-standard": "^4.0.0",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
@@ -32,7 +33,9 @@
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-processor-html": "^1.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-axios": "^2.1.4",
+    "vue-template-compiler": "^2.6.10",
+    "vuejs-datepicker": "^1.6.2"
   },
   "eslintConfig": {
     "root": true,
